# Openclaw-Game-Hub

./: README.md  pyproject.toml  requirements.txt
docs/: OPENCLAW_AGENT_GUIDE.md  OPENCLAW_AGENT_PROMPT.md  PI_UPDATE.md  Terminal Game Hub Specification v1.md
game_hub/: __init__.py  __main__.py  cli.py  config.py  game.py  replay.py  session.py
game_hub/display/: __init__.py  board.py
game_hub/engine/: move_gate.py
game_hub/games/: checkers.py  chess.py  tictactoe.py
game_hub/logging/: game_logger.py
game_hub/openclaw/: __init__.py  client.py  connection_test.py  device.py  errors.py  opponent.py  prompts.py  test_connection.py
game_hub/storage/: save.py
scripts/: smoke_test.py
terminal_game_hub.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_checkers_display.py
